linuxmuster-linbo7 (4.0.0-0beta4) lmn7-experimental; urgency=low

  * implemented images in subdirs.
  * kernel 5.10.43.
  * get filesytem type with blkid.
  * fixes and improvements in linbo-cloop2qcow2.
  * download and mount improvements in linbo_cmd.
  * added missing bochs_drm vga driver (fixes broken vga console in proxmox).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 23 Jun 2021 13:24:16 +0000

linuxmuster-linbo7 (4.0.0-0beta3) lmn7-experimental; urgency=low

  * Fix #6: Add Intel VMD Module to linbo.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 10 Jun 2021 12:29:49 +0000

linuxmuster-linbo7 (4.0.0-0beta2) lmn7-experimental; urgency=low

  * Fix #5: Syntax error in linbo-cloop2qcow2.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 10 Jun 2021 12:28:15 +0000

linuxmuster-linbo7 (4.0.0-0beta1) lmn7-experimental; urgency=low

  * Fix issues with capital letters in hostname and log/status files (https://github.com/linuxmuster/linuxmuster-linbo/pull/183).
  * changed iconname extension to .svg in start.conf examples.
  * updated kernel and initrd path in ubuntu start.conf examples.
  * wake-on-lan with broadcast address fails (https://github.com/linuxmuster/linuxmuster-linbo/issues/184).
  * Remove windows xp related tweak to suppress new hardware dialog.
  * package dependencies update.
  * reworked build environment completely.
  * implemented ctorrent client with opentracker and linbo-torrent control script.
  * added linbo-cloop2qcow2 cloop image conversion script.
  * moved postinst configure stuff to script linbo-configure.sh.
  * eliminated cloop module stuff from linbofs.
  * added linbo-multicast as a systemd service.
  * kernel update to 5.10.37.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 19 May 2021 18:45:40 +0000

linuxmuster-linbo7 (4.0.0-0alpha1) lmn7-experimental; urgency=low

  * increased verbosity.
  * more english translations.
  * return code improvements.
  * removed partition guid restoration.
